--- a/src/components/cgpaCal.css
+++ b/src/components/cgpaCal.css
@@ -1,8 +1,8 @@
-.mainPage {
+/* .mainPage {
     text-align: center;
     margin: 20px;
   }
-  
+   */
   .calculator {
     background-color: #f2f2f2;
     border-radius: 15px;
@@ -60,9 +60,14 @@
       box-shadow: 0 0 15px rgba(0, 123, 255, 0.3);
     }
   }
-  
+/*   
   .navigation {
     margin: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
   }
   
   .nav-link {
@@ -81,4 +86,4 @@
   .nav-link div:hover {
     background-color: #0056b3;
   }
-  
+   */
