--- a/src/components/sgpaCal.css
+++ b/src/components/sgpaCal.css
@@ -106,6 +106,8 @@
   padding: 0px;
   border: none;
   transition: box-shadow 0.2s ease-in-out; /* Smooth transition */
+  margin-top: 10px;
+  box-shadow: 0px 0px 10px skyblue;
 }
 
 .sunNum:hover {
@@ -144,7 +146,6 @@
 .div1 {
   display: flex;
   font-family: Georgia, "Times New Roman", Times, serif;
-  gap: 20px;
   color: snow;
   padding: 20px;
   width: 80%;
@@ -321,7 +322,8 @@
     padding: 0px;
     border: none;
     transition: box-shadow 0.2s ease-in-out; /* Smooth transition */
-    margin: -10px;
+    margin-top: 10px;
+    box-shadow: 0px 0px 10px skyblue;
   }
 
   .sunNum:hover {
